syntax = "proto3";
import "cluster.proto";
import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package sail.api.v1;

service RouteService {
  rpc List(google.protobuf.Empty) returns (ListRouteResponse) {}
  rpc Watch(google.protobuf.Empty) returns (stream WatchRouteResponse) {}
}

message ListRouteResponse {
  repeated Route items = 1;
}

message WatchRouteResponse {
  EventType event_type = 1;
  Route route = 2;
}

message Route {
  string route_id = 1;
  string cluster_id = 2;
  RouteMatch match = 3;
  int32 order = 4;
  google.protobuf.StringValue authorization_policy = 5;
  google.protobuf.StringValue rate_limiter_policy = 6;
  google.protobuf.StringValue cors_policy = 7;
  google.protobuf.StringValue timeout_policy = 8;
  google.protobuf.StringValue timeout = 9;
  google.protobuf.Int64Value max_request_body_size = 10;
  repeated RouteTransform transforms = 11;
  bool https_redirect = 12;
}

message RouteTransform {
  map<string, string> properties = 1;
}

message RouteMatch {
  repeated string  methods = 1;
  repeated string  hosts = 2;
  string path = 3;
  repeated RouteQueryParameter query_parameters = 4;
  repeated RouteHeader headers = 5;

  message RouteQueryParameter {
    string  name = 1;
    repeated string values = 2;
    QueryParameterMatchMode mode = 3;
    bool is_case_sensitive = 4;

    enum QueryParameterMatchMode{
      EXACT = 0;
      CONTAINS = 1;
      NOT_CONTAINS = 2;
      PREFIX = 3;
      EXISTS = 4;
    }
  }

  message RouteHeader {
    string  name = 1;
    repeated string values = 2;
    HeaderMatchMode mode = 3;
    bool is_case_sensitive = 4;

    enum HeaderMatchMode {
      EXACT_HEADER = 0;
      HEADER_PREFIX = 1;
      CONTAINS = 2;
      NOT_CONTAINS = 3;
      EXISTS = 4;
      NOT_EXISTS = 5;
    }
  }
}


